--- a/src/features/channels/styles.module.css
+++ b/src/features/channels/styles.module.css
@@ -5,9 +5,13 @@
 }
 
 .link:hover {
-    background: rgb(233, 233, 233);
+    background: rgb(242, 242, 242);
 }
 
 .activeLink {
-    background-color: rgb(147, 147, 255);
+    background-color: rgb(219, 219, 219);
+}
+
+.activeLink:hover {
+    background-color: rgb(211, 211, 211);
 }
