--- a/src/features/chat/styles.module.css
+++ b/src/features/chat/styles.module.css
@@ -1,9 +1,15 @@
 .messagesWrap {
     width: 100%;
     height: calc(100% - 65px);
+    overflow-y: auto;
 }
 
 .inputWrap {
     border-top: 1px solid gray;
     height: 60px;
+}
+
+.selectChatMessage {
+    width: 265px;
+    margin: 200px auto;
 }
