send image, sign up with email and password

--- a/src/features/chat/styles.module.css
+++ b/src/features/chat/styles.module.css
@@ -1,6 +1,5 @@
 .inputWrap {
-    border-top: 1px solid gray;
-    height: 60px;
+    border-top: 1px solid rgb(196, 196, 196);
 }
 
 .selectChatMessage {
