--- a/src/features/chat/components/ChatBody/styles.module.css
+++ b/src/features/chat/components/ChatBody/styles.module.css
@@ -1,14 +1,20 @@
 .messagesWrap {
     width: 100%;
-    height: calc(100% - 65px);
+    height: calc(100% - 72px);
     overflow-y: auto;
+}
+
+.subheader {
+    width: 100px;
+    margin: 0 auto;
 }
 
 .message {
     display: inline-block;
     padding: 3px 9px;
-    border-radius: 15px;
+    border-radius: 7px;
     white-space: pre-wrap;
+    word-break: break-all;
 }
 
 .message.outlined {
@@ -16,5 +22,17 @@
 }
 
 .message.filled {
-    background: rgb(209, 209, 209);
+    background: rgb(228, 228, 228);
+}
+
+.messageImage {
+    padding: 5px 0 0 0;
+    width: 100%;
+    max-width: 700px;
+}
+
+.messageTime {
+    font: 12px Arial;
+    color: rgb(124, 124, 124);
+    padding: 5px;
 }
